# mobile_robot_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mobile_description/lib/S{PROJECT_NAME}/: cmd_vel_mobile_controller
install/mobile_description/lib/mobile_description/: cmd_joint_torque  cmd_joint_vel  cmd_vel_mobile_controller
install/mobile_description/share/mobile_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/my_py_controllers/lib/my_py_controllers/: cmd_vel_mobile_controller
log/: latest_build  latest_list
src/mobile_description/: CMakeLists.txt  package.xml
src/mobile_description/config/: ekf.yaml  mobile_torque_controller.yaml  mobile_velocity_controller.yaml
src/mobile_description/examples/: cmd_joint_torque_mobile.cpp  cmd_joint_vel_mobile.cpp  cmd_vel_mobile.cpp  odom_pub.cpp
src/mobile_description/launch/: display.launch.xml  mobile_example_torque.launch.py  mobile_example_velocity.launch.py
src/mobile_description/meshes/: camera_link.STL  caster_base.STL  caster_wheel_joint.STL  lidar_link.STL
src/mobile_description/rviz/: rviz_config.rviz
src/mobile_description/urdf/: camera.xacro  common_mobile.xacro  imu.xacro  lidar.xacro  mobile.urdf.xacro  mobile.xacro  mobile_gazebo.xacro  mobile_torque.urdf.xacro  mobile_torque.xacro  mobile_velocity.urdf.xacro  mobile_velocity.xacro
src/my_py_controllers/: package.xml  setup.cfg  setup.py
src/my_py_controllers/my_py_controllers/: cmd_vel_mobile.py
(+41 files in other folders)
